--- a/JustGivingDitTest/App.config
+++ b/JustGivingDitTest/App.config
@@ -5,6 +5,10 @@
   </configSections>
   
   
-<specFlow>
+  
+  
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" /></startup><specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-  </specFlow></configuration>
+  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><!-- use unit test provider SpecRun+NUnit or SpecRun+MsTest for being able to execute the tests with SpecRun and another provider --><unitTestProvider name="SpecRun+NUnit" /><plugins>
+      <add name="SpecRun" />
+    </plugins></specFlow></configuration>
