--- a/JustGivingDitTest/packages.config
+++ b/JustGivingDitTest/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Selenium.Support" version="2.53.1" targetFramework="net40" />
-  <package id="Selenium.WebDriver" version="2.53.1" targetFramework="net40" />
-  <package id="SpecFlow" version="2.1.0" targetFramework="net40" />
+  <package id="NUnit" version="3.5.0" targetFramework="net45" />
+  <package id="Selenium.Support" version="3.0.0" targetFramework="net45" />
+  <package id="Selenium.WebDriver" version="3.0.0" targetFramework="net45" />
+  <package id="SpecFlow" version="2.1.0" targetFramework="net45" />
+  <package id="SpecFlow.NUnit" version="2.1.0" targetFramework="net45" />
+  <package id="SpecFlow.Web.UI.SeleniumTest" version="0.9.1" targetFramework="net45" />
+  <package id="SpecRun.Runner" version="1.5.2" targetFramework="net45" />
+  <package id="SpecRun.SpecFlow" version="1.5.2" targetFramework="net45" />
 </packages>
