--- a/JustGivingDitTest/JustGivingDitTest.csproj
+++ b/JustGivingDitTest/JustGivingDitTest.csproj
@@ -71,15 +71,17 @@
     <Compile Include="Pages\BasePage.cs" />
     <Compile Include="Pages\BasePage.Screenshot.cs" />
     <Compile Include="Pages\CommonPage.cs" />
-    <Compile Include="Pages\MessageAndAmountPage.cs" />
+    <Compile Include="Pages\HomePage.cs" />
     <Compile Include="Pages\IBasePage.cs" />
+    <Compile Include="Pages\AuthenticationPage.cs" />
+    <Compile Include="Pages\PaymentPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Features\SpecFlowFeature1.feature.cs">
+    <Compile Include="Features\GiveLoadsOfMoney.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>SpecFlowFeature1.feature</DependentUpon>
+      <DependentUpon>GiveLoadsOfMoney.feature</DependentUpon>
     </Compile>
-    <Compile Include="Steps\DonatePageSteps.cs" />
+    <Compile Include="Steps\Steps.cs" />
     <Compile Include="Utils\SeleniumExtender.cs" />
     <Compile Include="Utils\SpecFlowSeleniumException.cs" />
   </ItemGroup>
@@ -89,9 +91,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
-    <None Include="Features\SpecFlowFeature1.feature">
+    <None Include="Features\GiveLoadsOfMoney.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>SpecFlowFeature1.feature.cs</LastGenOutput>
+      <LastGenOutput>GiveLoadsOfMoney.feature.cs</LastGenOutput>
     </None>
     <Compile Include="Pages\IdentityPage.cs" />
     <None Include="runtests.cmd" />
